# smplchat

./: .gitignore  Dockerfile  README  README.md  dev.sh  pyproject.toml
.github/workflows/: devsh-all.yml  devsh-auto.yml  main.yml
Documentation/: structure_of_messages.ods
src/smplchat/: __main__.py  input_utils.py  main.py  settings.py  utils.py
src/smplchat/client_list/: __init__.py  clients.py  keepalive.py
src/smplchat/dispatcher/: dispatcher.py
src/smplchat/listener/: __init__.py  listener.py
src/smplchat/message/: __init__.py  message.py  message_gen.py
src/smplchat/message_list/: __init__.py  initial_messages.py  list.py
src/smplchat/packet-mangler/: __init__.py
src/smplchat/packet_mangler/: __init__.py  message.py  packer.py
src/smplchat/sender/: sender.py
src/smplchat/tui/: __init__.py  tui.py
src/smplchat/udp_comms/: __init__.py  dispatcher.py  listener.py  packer.py
tests/: test_client_list.py  test_dispatcher.py  test_dummy.py  test_keepalive_list.py  test_message_gen.py  test_message_list.py  test_packet_mangler.py
